--- a/themes/default/css/reportico.css
+++ b/themes/default/css/reportico.css
@@ -15,9 +15,9 @@
 }
 
 #reportico-container * {
--webkit-box-sizing: border-box;
+/*-webkit-box-sizing: border-box;*/
 -moz-box-sizing: border-box;
-box-sizing: border-box; 
+/*box-sizing: border-box; */
 }
 
 
