--- a/themes/bootstrap4/css/reportico.css
+++ b/themes/bootstrap4/css/reportico.css
@@ -776,7 +776,7 @@ input.reportico-admin-button2
     text-align: left;
     //margin: 4px;
     padding: 6px 8px 6px 8px;
-    margin-bottom: 5px !important;
+    //margin-bottom: 5px !important;
     background-repeat: no-repeat;
     //background-color: #ffffff !important;
     text-decoration: none;
@@ -1506,5 +1506,27 @@ border-top: 1px solid #e5e5e5;
 }
 .nvtooltip {
   font-family: sans-serif !important;
+}
+
+#reportico-spinner-overlay {
+    position: absolute;
+    display: none;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 1002;
+    cursor: pointer;
+}
+
+.nav-pills > li > a {
+    background-color: inherit;
+    border: dotted 1px #bbb;
+    margin: 2px 4px;
+    padding: 2px 4px;
+}
+.nav-pills > li > a.active {
+    background-color: #008800!important;
 }
 /* -------- END STYLES FOR PDF CHARTS --------*/
