--- a/themes/bootstrap4/css/reportico.css
+++ b/themes/bootstrap4/css/reportico.css
@@ -388,7 +388,7 @@ input.reportico-admin-button2
     text-align: left;
     margin-left: 0%;
     width: 100%;
-    border: solid 1px #AAAAAA;
+    /*border: solid 1px #AAAAAA;*/
 }
 
 /*
@@ -396,6 +396,7 @@ input.reportico-admin-button2
 {
     width: 100%;
     margin-bottom: 5px;
+    border: none;
 }
 
 .reportico-prepare-top-menuCell
@@ -1519,6 +1520,12 @@ border-top: 1px solid #e5e5e5;
     background-color: rgba(0,0,0,0.5);
     z-index: 1002;
     cursor: pointer;
+}
+
+.reportico-top-menu {
+    z-index: 1;
+    position: relative;
+    border: none;
 }
 
 .nav-pills > li > a {
