Remove icewhite theme and fix div issue in prepare template

--- a/themes/bootstrap4/css/reportico.css
+++ b/themes/bootstrap4/css/reportico.css
@@ -584,7 +584,7 @@ input.reportico-admin-button2
 {
     /*border: solid 1px #AAAAAA;*/
     background-color: #999;
-    overflow: scroll;
+    /*overflow: scroll;*/
     /*min-width: 100vw;*/
 }
 
